[package]
name = "searxkcd"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
reqwest = "0.12.5"
sdl2 = { version = "0.37.0", features = ["image", "ttf"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.39.2", features = ["full"] }

